Added links for the security team, differenciated between Commercial and...

--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -928,52 +928,53 @@ To help achieving the vision of being the most Transparent Security Group in the
   <tr>
     <th>
         <i class="fas fa-bullseye i-bt"></i>
-        <h5>Security Engineering</h5>
+        <h5><a href="https://about.gitlab.com/handbook/security/security-engineering/">Security Engineering</a></h5>
 
     </th>
     <th>
         <i class="fas fa-shield-alt i-bt"></i>
-        <h5>Security Operations</h5>
+        <h5><a href="https://about.gitlab.com/handbook/security/security-operations/">Security Operations</a></h5>
     </th>
     <th>
         <i class="fas fa-bullseye i-bt"></i>
-        <h5>Threat Management</h5>
+        <h5><a href="https://about.gitlab.com/handbook/security/threat-management/">Threat Management</a></h5>
     </th>
     <th>
         <i class="fas fa-hands-helping i-bt"></i>
-        <h5>Security Assurance</h5>
+        <h5><a href="https://about.gitlab.com/handbook/security/security-assurance/">Security Assurance</a></h5>
 
     </th>
   </tr>
   <tr>
       <td>
         <ul>
-            <li>Application Security</li>
-            <li>Infrastructure Security</li>
-            <li>Security Logging</li>
-            <li>Security Automation</li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-engineering/application-security/">Application Security</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-engineering/infrastructure-security/">Infrastructure Security</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-engineering/security-logging/">Security Logging</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-engineering/automation/">Security Automation</a></li>
             <li>External Security Communications</li>
         </ul>
       </td>
       <td>
         <ul>
-            <li>Security Incident Response Team (SIRT)</li>
-            <li>Trust and Safety</li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-operations/sirt/">Security Incident Response Team (SIRT)</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-operations/trustandsafety/">Trust and Safety</a></li>
         </ul>
       </td>
       <td>
         <ul>
-            <li>Red Team</li>
-            <li>Security Research</li>
-            <li>Security Threat & Vulnerability Management</li>
+            <li><a href="https://about.gitlab.com/handbook/security/threat-management/red-team/">Red Team</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/threat-management/security-research/">Security Research</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/threat-management/vulnerability-management/">Security Threat & Vulnerability Management</a></li>
         </ul>
       </td>
       <td>
         <ul>
-            <li>Field Security</li>
-            <li>Security Compliance</li>
-            <li>Security Governance</li>
-            <li>Security Risk</li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-assurance/field-security/">Field Security</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-assurance/security-compliance/">Security Compliance, Commercial</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-assurance/dedicated-compliance/">Security Compliance, Dedicated Markets</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-assurance/governance/">Security Governance</a></li>
+            <li><a href="https://about.gitlab.com/handbook/security/security-assurance/security-risk/">Security Risk</a></li>
         </ul>
       </td>
   </tr>
