Fixing Broken link and page formatting for Observability

--- a/infrastructure/team/reliability/observability.html.md.erb
+++ b/infrastructure/team/reliability/observability.html.md.erb
@@ -1,3 +1,11 @@
+---
+layout: handbook-page-toc
+title: "Reliability:Observability Team"
+---
+
+## On this page
+{:.no_toc .hidden-md .hidden-lg}
+
 ## Mission
 
 The Reliability::Observability team at GitLab mission is to Build, Run and Own the entire lifecycle of the suite of services that enable observability of 
@@ -44,6 +52,7 @@ focus as of early 2023 is for GitLab.com, but in the long run, we would like to 
 
 
 ## Overlap
+
 1.  With Scalability on
    a. [Projections team](https://about.gitlab.com/handbook/engineering/infrastructure/team/scalability/projections.html) for use of Thanos 
    b. [Frameworks team](https://about.gitlab.com/handbook/engineering/infrastructure/team/scalability/frameworks.html) in the [Service Catalog](https://gitlab.com/gitlab-com/gl-infra/scalability/-/issues/2098)
@@ -54,6 +63,7 @@ focus as of early 2023 is for GitLab.com, but in the long run, we would like to 
 
 
 ## Performance Indicators
+
 * Reliability SLx of Grafana and underlying dashboards.
 * Reliability SLx of Kibana - including ingestion delays.
 
@@ -64,6 +74,7 @@ TBD
 
 
 ## Key Technical Skills
+
 * Kibana/Elastic cluster management.  Fluentd/log shipping pipeline.
 * GKE, for example, we will likely be containerizing/K8s for things O11y runs.  Also 
 * knowledge of how log shipping with sidecars works.
