Updating line managers and adding team members to Reliability team pages

--- a/infrastructure/team/reliability/database-reliability.html.md.erb
+++ b/infrastructure/team/reliability/database-reliability.html.md.erb
@@ -48,7 +48,7 @@ The signals we use to know that we are achieving our mission:
 
 ## Team Members
 
-TBD
+<%= direct_team(manager_slug: 'dcurlewis')%>
 
 ## Key Technical Skills
 
