--- a/infrastructure/team/reliability/foundations.html.md.erb
+++ b/infrastructure/team/reliability/foundations.html.md.erb
@@ -72,7 +72,7 @@ Given the nature of this team's scope, several services the Foundation team work
 
 ## Team Members
 
-TBD
+<%= direct_team(manager_slug: 'amoter')%>
 
 ## Key Technical Skills
 
