--- a/infrastructure/team/reliability/general.html.md.erb
+++ b/infrastructure/team/reliability/general.html.md.erb
@@ -49,7 +49,7 @@ It is not always easy or possible to definitively determine the primary services
 
 ## Team Members
 
-TBD
+<%= direct_team(manager_slug: 'afappiano')%>
 
 ## Key Technical Skills
 The General Team must maintain a broad and diverse set of technical skills while also maintaining the ability to switch contexts frequently.  Some of these technical skills include:
