--- a/infrastructure/team/reliability/observability.html.md.erb
+++ b/infrastructure/team/reliability/observability.html.md.erb
@@ -60,7 +60,7 @@ focus as of early 2023 is for GitLab.com, but in the long run, we would like to 
 
 ## Team Members 
 
-TBD
+<%= direct_team(manager_slug: 'dave-smith')%>
 
 
 ## Key Technical Skills
