Add reflection blog post for Arty

--- a/cto-staff/index.html.md.erb
+++ b/cto-staff/index.html.md.erb
@@ -72,6 +72,7 @@ To get a better idea of the role, consider these resources:
 
 1. [Chief of Staff to CEO partnership with CEO video](https://www.youtube.com/watch?v=jdlNhxFTAnM). While it's not the same role, the Acting Chief of Staff to CTO role is modeled on the Chief of Staff to CEO role and serves a similar purpose.
 1. [Acting Chief of Staff Retrospectives](https://gitlab.com/gitlab-com/chief-of-staff-cto/-/issues/?sort=created_date&state=all&label_name%5B%5D=retrospective).
+1. [Reflections](#rotation-history)
 
 Questions can also be asked in the [#chief-of-staff-to-cto-and-alumni Slack channel](https://gitlab.slack.com/archives/C047PF4GG7L).
 
@@ -115,9 +116,9 @@ Candidates who are not selected for the upcoming rotation, but are eligible, wil
 
 ### Rotation history
 
-| Quarter | Acting CoS    |
-|---------|---------------|
-| FY23 Q1 | Sean McGivern |
-| FY23 Q2 | Matt Nohr     |
-| FY23 Q3 | Sam Beckham   |
-| FY23 Q4 | Cynthia "Arty" Ng |
+| Quarter | Name          | Reflection | 
+|---------|---------------|------------|
+| FY23 Q1 | Sean McGivern |            |
+| FY23 Q2 | Matt Nohr     |            |
+| FY23 Q3 | Sam Beckham   |            |
+| FY23 Q4 | Cynthia "Arty" Ng | [Blog post](https://cynthiang.ca/2023/01/31/reflection-acting-chief-of-staff-to-cto-at-gitlab/) |
