Update the Slack channel and issues board URL for the Reliability:Foundations team

--- a/infrastructure/team/reliability/foundations.html.md.erb
+++ b/infrastructure/team/reliability/foundations.html.md.erb
@@ -86,6 +86,6 @@ The Foundations Team must maintain a broad and diverse set of technical skills w
 
 ## Common Links
 
- * Slack Channel: [#infra-foundations-squad](https://gitlab.slack.com/archives/C0313V3L5T6)
- * [Issue Board](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Squad%3A%3AFoundations)
+ * Slack Channel: [#g_infra_foundations](https://gitlab.slack.com/archives/C0313V3L5T6)
+ * [Issue Board](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Team%3A%3AFoundations)
  * [Foundations team meeting agenda](https://docs.google.com/document/d/1JSG6Cbyf4ssqEScGo6emnzhLq-3OdmF4prLimfvXWb0/edit?usp=sharing)
