Add Q4 OKR in Quality and QE handbook  page

--- a/quality/index.html.md.erb
+++ b/quality/index.html.md.erb
@@ -123,7 +123,32 @@ In FY23 we will be focused on contributor success & customer results while deliv
 
 Objectives and Key Results (OKRs) help align our department towards what really matters. These happen quarterly and are based on [company OKRs](/company/okrs/) and we follow the OKR process defined here(/company/okrs/#how-to-use-gitlab-for-okrs). We check in on the status of our progress routinely throughout the quarter to determine whether we are on track or need to pivot in order to accomplish or change these goals. At the end of the quarter, we do a [final scoring](/company/okrs/#scoring-okrs) which includes a [retrospective](/handbook/engineering/#okr-retrospection) on how the quarter went according to these OKRs. 
 
-[Here  a list of current OKRs for our department.](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_asc&state=opened&label_name%5B%5D=Department%3A%3AQuality&label_name%5B%5D=Sub-Department%3A%3AQuality%20Engineering&type%5B%5D=objective&milestone_title=FY24-Q1&first_page_size=20)
+### Current quarter
+
+[FY24 Q1 Quality Department OKR overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122333710)
+
+### Previous quarter (FY23Q4)
+
+- ARR OKR: Increase Revenue by key Business Results => 94%
+  - KR: Resolve 30 S1/S2 customer impacting bugs and reference architecture improvements => 100%
+  - KR: Support Fedramp initiative through and post RAR Audit => 93%
+  - KR: Support successful completion of fulfillment systems initiatives => 83%
+  - KR: Create SSOT reporting for cost of hosting-related infrastructure => 100%
+- Product OKR: Increase Quality with test efficiency & customer insights => 63%
+  - KR: Create dashboards for customer impacting S1/S2 bugs by development teams => 50%
+  - KR: Reduce TtFF P80 from 33 minutes to 20 minutes => 40%
+  - KR: Improve master stability from 90% to 95% => 60%
+  - KR: Reduce the package-and-test duration by 30% => 100%
+- Product OKR: Increase Community Contributions with recognition, events and Leading Orgs on-boarding => 80%
+  - KR: Scale the Community through a contributor event, mentoring & onboarding of customers
+  - KR: Increase Contribution Value by increasing collaboration and increasing recognition
+- Team OKR: Hire and grow the team => 59%
+  - KR: Meet FY23Q4 hiring target
+  - KR: Complete talent assessment on time with quality
+  - KR: Increase URG representation by hiring 2 management positions classified as URG => 0%
+- Aspirational OKR: Educate team members on being "Best in Class" & identify operational gaps => 86%
+  - KR: 100% of team members review GitLab competitive analysis => 98%
+  - KR: Identify 6 test process improvements in areas that are behind competition maturity => 74%
 
 ## Quality Department structure
 
