--- a/quality/quality-engineering/index.html.md.erb
+++ b/quality/quality-engineering/index.html.md.erb
@@ -81,6 +81,21 @@ Quality Engineering has been key to supporting prospect POVs and providing promp
 
 Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122330246) of our current Quality Engineering OKR.
 
+## Previous Quarter OKRs (FY23Q4)
+
+- ARR OKR: Drive company ARR achievement through key business initiatives => 88%
+  - KR: Support FedRamp initiative through and post RAR Audit => 93%
+  - KR: Support successful completion of Fulfillment systems initiatives => 83%
+- Efficiency OKR: Improve efficiency with test framework enhancement,  better on-call process, and burning down customer centric bugs => 86%
+  - KR: Test framework and architecture enhancements => 97%
+  - KR: Increase pipeline efficiency by providing better logging and reviewing existing test coverage  => 78%
+  - KR: Support Runner by increasing test coverage and test environments => 69%
+  - KR: Review and advocate for S1/S2 Customer centric bugs => 100%
+- Team OKR: Support career development and growth of department through Talent assessment, hiring and streamlining hiring process => 74%
+  - KR: Complete Talent Assessment for Quality Engineers => 100%
+  - KR: Hire to Plan => 47%
+  - KR: Steamline SET hiring process => 76%
+
 ## Team Structure
 
 Quality Engineering is function under the Quality Department operating as several teams of Software Engineers in Test, each led by a Quality Engineering Manager reporting to the Quality Engineering Sub-Department Leader.
