Update AI Assisted team

--- a/development/data-science/ai-assisted/index.html.md.erb
+++ b/development/data-science/ai-assisted/index.html.md.erb
@@ -35,12 +35,18 @@ The following people are permanent members of the AI Assisted Group:
 
 | Who | Role |
 | --- | --- |
-| [Alexander Chueshev](https://about.gitlab.com/company/team/#achueshev) | Senior backend engineer |
-| [Bruno Cardoso](https://about.gitlab.com/company/team) | Senior backend engineer |
-| [Fred de Gier](https://gitlab.com/fdegier) | Staff Incubation Engineer | 
-| [Tan Le](https://about.gitlab.com/company/team) | Senior Fullstack engineer |
+| [Alexander Chueshev](https://about.gitlab.com/company/team/#achueshev) | Senior Backend Engineer |
+| [Bruno Cardoso](https://about.gitlab.com/company/team/#bcardoso) | Senior Backend Engineer |
+| [Hongtao Yang](https://about.gitlab.com/company/team/#hongtaoyang) | Backend Engineer |
+| [Andras Herczeg](https://about.gitlab.com/company/team/#andrasherczeg) | Backend Engineer |
+| [Stephan Rayner](https://about.gitlab.com/company/team/#srayner) | Senior Backend Engineer |
+| [Alper Akgun](https://about.gitlab.com/company/team/#a_akgun) | Staff Fullstack Engineer |
+| [Fred de Gier](https://about.gitlab.com/company/team/#fdegier) | Staff Incubation Engineer | 
+| [Tan Le](https://about.gitlab.com/company/team/#tle_gitlab) | Senior Fullstack engineer |
+| [Dylan Bernardi](https://about.gitlab.com/company/team) | Intern Backend Engineer |
 | [Monmayuri Ray](https://about.gitlab.com/company/team/#mon) | Engineering Manager |
-| [Taylor McCaslin](https://about.gitlab.com/company/team/#tmccaslin) | Principal Product Manager |
+| [Neha Khalwadekar](https://about.gitlab.com/company/team/#nkhalwadekar) | Product Manager |
+| [Taylor McCaslin](https://about.gitlab.com/company/team/#tmccaslin) | Group Product Manager |
 
 ## How to contact us
 
