Fix broken link in security page

--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -1004,7 +1004,7 @@ Information Security Policies are reviewed annually by the Director of Security 
 
 - [GitLab Information Security Management System](/handbook/security/ISMS.html)
 - [GitLab Internal Acceptable Use Policy](/handbook/people-group/acceptable-use-policy/)
-- [GitLab Password Standards](/handbook/security/password-standard)
+- [GitLab Password Standards](/handbook/security/password-standard.html)
 - [Access Management Policy](/handbook/security/access-management-policy.html)
 - [Data Classification Standard](/handbook/security/data-classification-standard.html)
 - [GitLab Cryptography Standard](/handbook/security/cryptographic-standard.html)
